# avs2dec

./: .gitignore  CMakeLists.txt  README.md
include/avs2dec/: avs2dec.h  common.h  data.h  headers.h  picture.h  version.h
src/: aec.c  aec_internal.h  alf.c  alf_simd.c  cpu.c  cpu.h  cu.c  decode.c  getbits.c  getbits.h  header.c  internal.h  ipred.c  ipred_simd.c  itx.c  itx_simd.c  levels.h  lf_apply.c  lf_simd.c  lib.c  log.c  log.h  loopfilter.c  mc.c  mc_simd.c  mem.c  mem.h  picture.c  quant.c  quant.h  quant_simd.c  ref.c  sao.c  sao_simd.c  simd.h  simd_init.c  stream.c  tables.c  tables.h  thread.h
tools/: avs2dec.c  avs2dec_ts.c  gop_split.c
tools/input/: annexb.c  input.c  input.h  section5.c
tools/output/: output.c  output.h  y4m.c  yuv.c
